# Meta_Hackathon

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  verify_output.py
baseline/: run.py
env/: __init__.py  environment.py  graders.py  models.py  tasks.py
frontend/: index.html
server/: app.py
sql-query-workshop/: README.md  app.py  baseline_results.json
