[project]
name = "sql-query-workshop"
version = "2.0.0"
description = "A custom OpenEnv benchmark for SQL query orchestration and performance tuning."
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "openenv-core>=0.2.0",
    "openai>=1.0.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
